Added BusSimulation prototype, Updated Database, view, viewmodels

--- a/WebMaze/Views/Bus/ManageBus.cshtml
+++ b/WebMaze/Views/Bus/ManageBus.cshtml
@@ -15,6 +15,7 @@
                 <td>@bus.Capacity;</td>
                 <td>@bus.Capacity;</td>
                 <td>@bus.RegistrationPlate;</td>
+                <td>@bus.CurrentOccupation</td>
             </tr>
           }
     </table>
