--- a/WebMaze/Views/Bus/ManageBusWorker.cshtml
+++ b/WebMaze/Views/Bus/ManageBusWorker.cshtml
@@ -1,30 +1,39 @@
 ﻿@using WebMaze.Models.Bus
-@model BusManageViewModel
+@model ManageBusWorkerViewModel
+
+!!Only retoutch design
 
 <div>
     @Html.Partial("BusAdminPartial")
 </div>
 
-<div>@foreach (var bus in Model.Buses)
+<div>@foreach (var worker in Model.BusWorkers)
 {
-    <div>@bus.BusRouteId;@bus.Capacity;@bus.Id;@bus.RegistrationPlate;</div>
+    <div>@worker.CertificateId @worker.CitizenUser.FirstName @worker.CitizenUser.LastName</div>
 }</div>
 <div>
-    <form action="@Url.Action("ManageBus", "Bus")" method="post">
+    <form action="@Url.Action("ManageBusWorker", "Bus")" method="post">
         <div>
-            Registration plate: @Html.TextBoxFor(x=>x.Bus.RegistrationPlate)
+            Certificate Id: 
+            <select name="CertificateId">
+                @foreach(var certificate in Model.Certificates)
+                {
+                    <option value="@certificate.Id">@certificate.Id</option>
+                }
+            </select>
         </div>
         <div>
-            Capacity: @Html.TextBoxFor(x => x.Bus.Capacity)
+            Citizen Id: @Html.TextBoxFor(x => x.CitizenUserId)
         </div>
+            @Html.HiddenFor(x => x.Certificates)
+            @Html.HiddenFor(x => x.BusWorkers)
+            @Html.HiddenFor(x => x.CitizenUsers)
+    <div>
+        @Html.ValidationMessageFor(x => x.CitizenUserId)
+        @Html.ValidationMessageFor(x => x.CertificateId)
+    </div>
         <div>
-            Number of route:@Html.TextBoxFor(x=>x.Bus.BusRouteId)
-        </div>
-        <div>
-            Worker ID: @Html.TextBoxFor(x=>x.Bus.WorkerId)
-        </div>
-        <div>
-            <input type="submit" value="Add bus" />
+            <input type="submit" value="Add worker" />
         </div>
     </form>
 </div>
