Updated TestSeed, BusDbnaming

--- a/WebMaze/Views/Bus/EditBus.cshtml
+++ b/WebMaze/Views/Bus/EditBus.cshtml
@@ -18,7 +18,7 @@
                     Number of route:@Html.TextBoxFor(x => x.BusRouteId)
                 </div>
                 <div>
-                    Worker ID: @Html.TextBoxFor(x => x.WorkerId)
+                    Worker ID: @Html.TextBoxFor(x => x.BusWorkerId)
                 </div>
                 <div>
                     Bus model: @Html.TextBoxFor(x=>x.BusModel)
