--- a/WebMaze/Views/Bus/ManageBus.cshtml
+++ b/WebMaze/Views/Bus/ManageBus.cshtml
@@ -33,7 +33,7 @@
                     Number of route:@Html.TextBoxFor(x => x.Bus.BusRouteId)
                 </div>
                 <div>
-                    Worker ID: @Html.TextBoxFor(x => x.Bus.WorkerId)
+                    Worker ID: @Html.TextBoxFor(x => x.Bus.BusWorkerId)
                 </div>
                 <div>
                     <input type="submit" value="Add bus" />
