--- a/WebMaze/Views/Shared/_Layout.cshtml
+++ b/WebMaze/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="~/css/HealthDepartment.css?t=@DateTime.Now.Ticks" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/scripts/jquery-1.7.1.js"></script>
+    <script src="~/scripts/jquery.unobtrusive-ajax.js"></script>
     @RenderSection("Scripts", required: false)
 </head>
 <body>
